[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.14.3"
pytelegrambotapi = "^4.16.1"
gtts = "^2.5.1"
flask = "^3.0.2"
requests = "^2.31.0"
background = "^0.2.1"
py = "^1.11.0"
pytz = "^2024.1"
pyttsx3 = "^2.90"
aiogram = "^3.24.0"
google-generativeai = "^0.8.6"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"